TestSuite/errors/err0056.pas

var f : function : integer;

begin
f += 3;
end.